package com.designpatternplayground.backend.auth.web;

public record AuthResponse(
	AuthUserResponse user
) {
}
